<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">"Gym Thing "</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_workout_creater">WorkoutCreaterActivity</string>
    <string name="title_activity_workout">WorkoutActivity</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="create_schedule">Create schedule</string>
    <string name="submit">Submit</string>
    <string name="add_schedule">Add Schedule</string>
    <string name="view_workout">View workout</string>

    <string name="workout_comments_title">Comments</string>
    <string name="workout_date_title">Date</string>
    <string name="workout_description_title">Description</string>
    <string name="workout_comments">Leave a comment (optional)</string>
</resources>
