<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_workout_creater"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ru.gymthing.WorkoutCreaterActivity">

    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ToolbarColoredBackArrow"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_below="@id/toolbar"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingLeft="@dimen/activity_horizontal_margin"
                  android:paddingRight="@dimen/activity_horizontal_margin"
                  android:paddingTop="@dimen/activity_vertical_margin"
                  android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_monday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_monday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/monday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_tuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_tuesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tuesday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_wednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_wednesday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wednesday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_thursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_thursday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/thursday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_friday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_friday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/friday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_saturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_saturday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/saturday"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_sunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                    android:id="@+id/input_sunday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sunday"/>
        </android.support.design.widget.TextInputLayout>

        <Button
                android:text="@string/submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/button"
                android:onClick="submitForm"/>

    </LinearLayout>

</RelativeLayout>
