<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/workout_activity_left"
                android:paddingRight="@dimen/md_keylines"
                android:paddingTop="@dimen/md_keylines">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/workout_description_title"
                    android:textSize="@dimen/article_titles"
                    android:layout_marginBottom="@dimen/md_keylines"/>

            <TextView
                    android:id="@+id/workout_description_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/workout_date_title"
                    android:textSize="@dimen/article_titles"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"/>

            <TextView
                    android:id="@+id/workout_date_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/workout_comments_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorAccent"
                    android:text="@string/workout_comments_title"
                    android:textSize="@dimen/article_titles"
                    android:layout_marginBottom="@dimen/md_keylines"
                    android:layout_marginTop="@dimen/md_keylines"/>

            <TextView
                    android:id="@+id/workout_comments_body"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/workout_comments_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/workout_comments_form"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/workout_comments"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                    android:text="@string/submit"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:id="@+id/submit_comments"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

</android.support.design.widget.CoordinatorLayout>
